--- a/hwk03/index.html
+++ b/hwk03/index.html
@@ -28,7 +28,7 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width, maximum-scale=1.0" />
 
   <!-- Make the app title different than the page title. -->
-  <meta name="apple-mobile-web-app-title" content="Origami Animals">
+  <meta name="apple-mobile-web-app-title" content="Origami">
 
   <!-- Disable automatic phone number detection. -->
   <meta name="format-detection" content="telephone=no">
