--- a/final/index.html
+++ b/final/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="cache.manifest">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="A simple decision assistant">
-  <meta name="theme-color" content="#1cb4df" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
+  <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="A simple decision assistant">
+    <meta name="theme-color" content="#1cb4df" /> -->
 
   <!-- Add manifest -->
-  <link rel="manifest" href="manifest.json">
+  <!-- <link rel="manifest" href="manifest.json"> -->
 
   <!-- Apple iOS meta tags and icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +25,14 @@
   <link rel="apple-touch-icon" href="images/icons/icon-57x57.png" sizes="57x57">
 
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/css-add2home.css">
   <link rel="stylesheet" href="css/main.css">
+
+  <style>
+    html {
+      -webkit-text-size-adjust: 100%;
+    }
+  </style>
 
   <title>Bite</title>
 </head>
@@ -35,68 +43,72 @@
       <img class="logo" src="images/bite-logo.png" alt="BITE">
     </header>
 
-    <section id="like-dislike-section">
-      <!-- <img src="images/like-dislike.png" alt="like/like-dislike slider"> -->
-      <span id="slide-bg"></span>
-      <input id="toggle-on" class="toggle toggle-left" name="toggle" value="false" type="radio" checked>
-      <label for="toggle-on" class="btn">Likes</label>
-      <input id="toggle-off" class="toggle toggle-right" name="toggle" value="true" type="radio">
-      <label for="toggle-off" class="btn">Dislikes</label>
-    </section>
+    <div id="selection-div">
+      <section id="like-dislike-section">
+        <!-- <img src="images/like-dislike.png" alt="like/like-dislike slider"> -->
+        <span id="slide-bg"></span>
+        <input id="toggle-on" class="toggle toggle-left" name="toggle" value="false" type="radio" checked>
+        <label for="toggle-on" class="btn">Likes</label>
+        <input id="toggle-off" class="toggle toggle-right" name="toggle" value="true" type="radio">
+        <label for="toggle-off" class="btn">Dislikes</label>
+      </section>
 
-    <section id="cuisine-section">
+      <section id="cuisine-section">
 
-      <form action="" id="cuisine-select">
-        <label>
-          <input type="checkbox" name="cuisine" id="american">
-          <span class="cuisine-icon">
-            <img class="food-img" src="images/cuisine-american.png" alt="american food">
-            <p class="food-label">american</p>
-          </span>
-        </label>
-        <label>
-          <input type="checkbox" name="cuisine" id="chinese">
-          <span class="cuisine-icon">
-            <img class="food-img" src="images/cuisine-chinese.png" alt="chinese food">
-            <p class="food-label">chinese</p>
-          </span>
-        </label>
-        <label>
-          <input type="checkbox" name="cuisine" id="italian">
-          <span class="cuisine-icon">
-            <img class="food-img" src="images/cuisine-italian.png" alt="italian food">
-            <p class="food-label">italian</p>
-          </span>
-        </label>
-        <label>
-          <input type="checkbox" name="cuisine" id="indian">
-          <span class="cuisine-icon">
-            <img class="food-img" src="images/cuisine-indian.png" alt="indian food">
-            <p class="food-label">indian</p>
-          </span>
-        </label>
-        <label>
-          <input type="checkbox" name="cuisine" id="hispanic">
-          <span class="cuisine-icon">
-            <img class="food-img" src="images/cuisine-hispanic.png" alt="hispanic food">
-            <p class="food-label">hispanic</p>
-          </span>
-        </label>
-        <label>
-          <input type="checkbox" name="cuisine" id="japanese">
-          <span class="cuisine-icon">
-            <img class="food-img" src="images/cuisine-japanese.png" alt="japanese food">
-            <p class="food-label">japanese</p>
-          </span>
-        </label>
-      </form>
-    </section>
+        <form action="" id="cuisine">
+          <div id="cuisine-select">
+            <label>
+              <input type="checkbox" name="cuisine" id="american">
+              <span class="cuisine-icon">
+                <img class="food-img" src="images/cuisine-american.png" alt="american food">
+                <p class="food-label">american</p>
+              </span>
+            </label>
+            <label>
+              <input type="checkbox" name="cuisine" id="chinese">
+              <span class="cuisine-icon">
+                <img class="food-img" src="images/cuisine-chinese.png" alt="chinese food">
+                <p class="food-label">chinese</p>
+              </span>
+            </label>
+            <label>
+              <input type="checkbox" name="cuisine" id="italian">
+              <span class="cuisine-icon">
+                <img class="food-img" src="images/cuisine-italian.png" alt="italian food">
+                <p class="food-label">italian</p>
+              </span>
+            </label>
+            <label>
+              <input type="checkbox" name="cuisine" id="indian">
+              <span class="cuisine-icon">
+                <img class="food-img" src="images/cuisine-indian.png" alt="indian food">
+                <p class="food-label">indian</p>
+              </span>
+            </label>
+            <label>
+              <input type="checkbox" name="cuisine" id="hispanic">
+              <span class="cuisine-icon">
+                <img class="food-img" src="images/cuisine-hispanic.png" alt="hispanic food">
+                <p class="food-label">hispanic</p>
+              </span>
+            </label>
+            <label>
+              <input type="checkbox" name="cuisine" id="japanese">
+              <span class="cuisine-icon">
+                <img class="food-img" src="images/cuisine-japanese.png" alt="japanese food">
+                <p class="food-label">japanese</p>
+              </span>
+            </label>
+          </div>
+          <div>
+            <input id="submit-btn" type="submit" value="Pick For Me">
+          </div>
 
-    <div>
-      <img id="pickForMe-btn" src="images/pickForMe-btn.png" alt="Pick For Me">
+        </form>
+      </section>
     </div>
 
-    <!-- <div id="shuffling-animation-div">
+    <div id="shuffling-animation-div" class="hidden">
       <div id="shuffling-animation-container">
         <div class="hand">
           <div class="card card-1">
@@ -114,24 +126,41 @@
         </div>
       </div>
 
-      <svg id="picking" xmlns="http://www.w3.org/2000/svg" width="132" height="43" viewBox="0 0 132 43">
-        <text id="picking" transform="translate(0 34)" fill="#fff" font-size="30"
-          font-family="Filicudi-Solid, Filicudi Solid">
-          <tspan x="0" y="0">Picking...</tspan>
-        </text>
-      </svg>
-    </div> -->
-
-    <div id="result-div">
-      <div id="result-container">
-        <div id="big-box-test"></div>
-        <button class="button" id="nearby"></button>
-        <button class="button" id="pick-again"></button>
+      <div id="picking">
+        <p>picking...</p>
       </div>
     </div>
 
+    <div id="result-div" class="hidden">
+      <div id="result-container">
+        <div id="result-icon">
+          <img src="images/cuisine-chinese@2x.png" alt="Chinese Food">
+          <p class="result-label">Chinese</p>
+        </div>
+        <button class="button" id="nearby">
+          <p>Find Nearby</p>
+        </button>
+        <button class="button" id="pick-again">
+          <p>Pick Again</p>
+        </button>
+      </div>
+    </div>
+
+    <div id="landscape">
+      <h2>Please rotate your device to use this app</h2>
+    </div>
 
   </main>
+
+  <script type="text/javascript">
+    // Customize config var BEFORE loading add2home.js file
+    var addToHomeConfig = {
+      touchIcon: true
+    }
+  </script>
+  <script src="js-refresh-manifest.js"></script>
+  <script src="js-add2home.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
