update to include Jervo specs
Updated app to include add-ons provided by Jervo.

--- a/w04-basicwebapp-add2home-00/w04-basicwebapp-add2home-00/index.html
+++ b/w04-basicwebapp-add2home-00/w04-basicwebapp-add2home-00/index.html
@@ -1,21 +1,14 @@
-<!--
-  REF: http://taylor.fausak.me/2015/01/27/ios-8-web-apps/
-  MOD: Jervis Thompson
-  DAT: 2015
-  --
-  iOS 9 BUG: http://stackoverflow.com/questions/31471603/ios-9-status-bar-meta-tag-and-startup-image-links-not-working
--->
-
-<html manifest="cache.manifest">
+<!DOCTYPE html>
+<html lang="en" manifest="cache.manifest">
 
 <head>
   <title>iCon and Startup Sample</title>
 
   <!-- CONFIGURATION -->
-  
+
   <!-- Set character settings -->
   <meta charset="utf-8">
-  
+
   <!-- Allow web app to be run in full-screen mode. -->
   <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -32,12 +25,12 @@
 
   <!-- Disable automatic phone number detection. -->
   <meta name="format-detection" content="telephone=no">
-  
+
   <!-- CSS -->
   <link rel="stylesheet" href="css-normalize.css">
   <link rel="stylesheet" href="css-add2home.css">
   <link rel="stylesheet" href="css-main.css">
-  
+
   <!-- **** ICONS **** -->
   <!-- ** IPADS ** -->
   <!-- iPad retina icon -->
