Back track to single form
Changed back to single form. Version up

--- a/final/index.html
+++ b/final/index.html
@@ -54,46 +54,46 @@
         <label for="toggle-off" class="btn">Dislikes</label>
       </section>
 
-      <section id="likes" class="cuisine-section">
-        <form action="" id="cuisine-like">
-          <div id="select-like" class="cuisine-select">
+      <section class="cuisine-section">
+        <form action="" id="cuisine">
+          <div id="cuisine-select">
             <label>
-              <input type="checkbox" name="cuisine" id="american-like">
+              <input type="checkbox" name="cuisine" id="american">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-american.png" alt="american food">
                 <p class="food-label">american</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="chinese-like">
+              <input type="checkbox" name="cuisine" id="chinese">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-chinese.png" alt="chinese food">
                 <p class="food-label">chinese</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="italian-like">
+              <input type="checkbox" name="cuisine" id="italian">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-italian.png" alt="italian food">
                 <p class="food-label">italian</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="indian-like">
+              <input type="checkbox" name="cuisine" id="indian">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-indian.png" alt="indian food">
                 <p class="food-label">indian</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="hispanic-like">
+              <input type="checkbox" name="cuisine" id="hispanic">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-hispanic.png" alt="hispanic food">
                 <p class="food-label">hispanic</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="japanese-like">
+              <input type="checkbox" name="cuisine" id="japanese">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-japanese.png" alt="japanese food">
                 <p class="food-label">japanese</p>
@@ -101,13 +101,13 @@
             </label>
           </div>
           <div>
-            <input id="submit-btn-likes" type="submit" value="Pick For Me">
+            <input id="submit-btn" type="submit" value="Find me food">
           </div>
 
         </form>
       </section>
 
-      <section id="dislikes" class="cuisine-section, hidden">
+      <!-- <section id="dislikes" class="cuisine-section, hidden">
         <form action="" id="cuisine-dislike">
           <div id="select-dislike" class="cuisine-select">
             <label>
@@ -154,10 +154,10 @@
             </label>
           </div>
           <div>
-            <input id="submit-btn-dislikes" type="submit" value="Pick For Me">
+            <input id="submit-btn-dislikes" type="submit" value="Find me food">
           </div>
 
-        </form>
+      </form> -->
       </section>
 
     </div>
