--- a/final/index.html
+++ b/final/index.html
@@ -54,46 +54,46 @@
         <label for="toggle-off" class="btn">Dislikes</label>
       </section>
 
-      <section class="cuisine-section">
+      <section id="cuisine-section">
         <form action="" id="cuisine">
           <div id="cuisine-select">
             <label>
-              <input type="checkbox" name="cuisine" id="american">
+              <input type="checkbox" name="cuisine" id="american" value="1">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-american.png" alt="american food">
                 <p class="food-label">american</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="chinese">
+              <input type="checkbox" name="cuisine" id="chinese" value="2">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-chinese.png" alt="chinese food">
                 <p class="food-label">chinese</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="italian">
+              <input type="checkbox" name="cuisine" id="italian" value="3">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-italian.png" alt="italian food">
                 <p class="food-label">italian</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="indian">
+              <input type="checkbox" name="cuisine" id="indian" value="4">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-indian.png" alt="indian food">
                 <p class="food-label">indian</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="hispanic">
+              <input type="checkbox" name="cuisine" id="hispanic" value="5">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-hispanic.png" alt="hispanic food">
                 <p class="food-label">hispanic</p>
               </span>
             </label>
             <label>
-              <input type="checkbox" name="cuisine" id="japanese">
+              <input type="checkbox" name="cuisine" id="japanese" value="6">
               <span class="cuisine-icon">
                 <img class="food-img" src="images/cuisine-japanese.png" alt="japanese food">
                 <p class="food-label">japanese</p>
