:heavy_minus_sign: remove slider
Commented out slider section. Add instructions div.

--- a/final/index.html
+++ b/final/index.html
@@ -45,14 +45,18 @@
     </header>
 
     <div id="selection-div">
-      <section id="like-dislike-section">
-        <!-- <img src="images/like-dislike.png" alt="like/like-dislike slider"> -->
+      <!--<section id="like-dislike-section">
+         <img src="images/like-dislike.png" alt="like/like-dislike slider"> 
         <span id="slide-bg"></span>
         <input id="toggle-on" class="toggle toggle-left" name="toggle" value="false" type="radio" checked>
         <label for="toggle-on" class="btn">Likes</label>
         <input id="toggle-off" class="toggle toggle-right" name="toggle" value="true" type="radio">
         <label for="toggle-off" class="btn">Dislikes</label>
-      </section>
+      </section>-->
+      <div id="instructions">
+        <h2>Pick what you like</h2>
+        <h3>We'll handle the rest</h3>
+      </div>
 
       <section id="cuisine-section">
         <form action="" id="cuisine">
