--- a/final/index.html
+++ b/final/index.html
@@ -111,59 +111,6 @@
         </form>
       </section>
 
-      <!-- <section id="dislikes" class="cuisine-section, hidden">
-        <form action="" id="cuisine-dislike">
-          <div id="select-dislike" class="cuisine-select">
-            <label>
-              <input type="checkbox" name="cuisine" id="american-dislike">
-              <span class="cuisine-icon">
-                <img class="food-img" src="images/cuisine-american.png" alt="american food">
-                <p class="food-label">american</p>
-              </span>
-            </label>
-            <label>
-              <input type="checkbox" name="cuisine" id="chinese-dislike">
-              <span class="cuisine-icon">
-                <img class="food-img" src="images/cuisine-chinese.png" alt="chinese food">
-                <p class="food-label">chinese</p>
-              </span>
-            </label>
-            <label>
-              <input type="checkbox" name="cuisine" id="italian-dislike">
-              <span class="cuisine-icon">
-                <img class="food-img" src="images/cuisine-italian.png" alt="italian food">
-                <p class="food-label">italian</p>
-              </span>
-            </label>
-            <label>
-              <input type="checkbox" name="cuisine" id="indian-dislike">
-              <span class="cuisine-icon">
-                <img class="food-img" src="images/cuisine-indian.png" alt="indian food">
-                <p class="food-label">indian</p>
-              </span>
-            </label>
-            <label>
-              <input type="checkbox" name="cuisine" id="hispanic-dislike">
-              <span class="cuisine-icon">
-                <img class="food-img" src="images/cuisine-hispanic.png" alt="hispanic food">
-                <p class="food-label">hispanic</p>
-              </span>
-            </label>
-            <label>
-              <input type="checkbox" name="cuisine" id="japanese-dislike">
-              <span class="cuisine-icon">
-                <img class="food-img" src="images/cuisine-japanese.png" alt="japanese food">
-                <p class="food-label">japanese</p>
-              </span>
-            </label>
-          </div>
-          <div>
-            <input id="submit-btn-dislikes" type="submit" value="Find me food">
-          </div>
-
-      </form> -->
-      </section>
-
     </div>
 
     <div id="shuffling-animation-div" class="hidden">
@@ -192,7 +139,7 @@
     <div id="result-div" class="hidden">
       <div id="result-container">
         <div id="result-icon">
-          <img src="images/cuisine-chinese@2x.png" alt="Chinese Food">
+          <img id="" src="images/cuisine-chinese@2x.png" alt="Chinese Food">
           <p class="result-label">Chinese</p>
         </div>
         <button class="button" id="nearby">
