--- a/final/index.html
+++ b/final/index.html
@@ -139,8 +139,8 @@
     <div id="result-div" class="hidden">
       <div id="result-container">
         <div id="result-icon">
-          <img id="" src="images/cuisine-chinese@2x.png" alt="Chinese Food">
-          <p class="result-label">Chinese</p>
+          <img id="result-img" src="images/cuisine-chinese@2x.png" alt="Chinese Food">
+          <p id="result-label" class="result-label">Chinese</p>
         </div>
         <button class="button" id="nearby">
           <p>Find Nearby</p>
