--- a/final/index.html
+++ b/final/index.html
@@ -5,14 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
   <meta name="format-detection" content="telephone=no">
-  <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="A simple decision assistant">
-    <meta name="theme-color" content="#1cb4df" /> -->
-
-  <!-- Add manifest -->
-  <!-- <link rel="manifest" href="manifest.json"> -->
-
-  <!-- Apple iOS meta tags and icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Bite">
@@ -103,6 +95,11 @@
         </form>
       </section>
 
+    </div>
+
+    <div id="alert">
+      <span id="alert-close"></span>
+      <p>Please select at least two options</p>
     </div>
 
     <div id="shuffling-animation-div" class="hidden">
