Add alert message functionality
Add functionality to alert message to appear if two items are not selected and to close when the x is clicked

--- a/final/index.html
+++ b/final/index.html
@@ -97,9 +97,14 @@
 
     </div>
 
-    <div id="alert">
-      <span id="alert-close"></span>
-      <p>Please select at least two options</p>
+    <div id="alert" class="hidden">
+      <span>
+        <span id="alert-close">
+          <span class="close"></span>
+          <span class="close"></span>
+        </span>
+        <p>Please select at least two options</p>
+      </span>
     </div>
 
     <div id="shuffling-animation-div" class="hidden">
